--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "qs": "^6.10.3",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
