--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "lottie-web-vue": "1.2.1",
     "qs": "^6.10.3",
     "vue": "^2.6.14",
     "vuejs-paginate": "^2.1.0"
