--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "qs": "^6.10.3",
     "vue": "^2.6.14",
+    "vue-toastification": "^1.7.14",
     "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
